--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,22 @@
 
 {% block content %}
   <h1>Welcome to To-Do List App</h1>
-
+ <h1>Todo List</h1>
+    <ul>
+        {% for task in tasks %}
+            <li>
+                {{ task.content }} (Created: {{ task.created_datetime }})
+                {% if task.deadline_datetime %}
+                    - Deadline: {{ task.deadline_datetime }}
+                {% endif %}
+                {% if not task.is_done %}
+                    - <a href="{% url 'toggle_task_status' task.id %}">Complete</a>
+                {% else %}
+                    - <a href="{% url 'toggle_task_status' task.id %}">Undo</a>
+                {% endif %}
+                - <a href="{% url 'delete_task' task.id %}">Delete</a>
+            </li>
+        {% endfor %}
+    </ul>
+    <a href="{% url 'add_task' %}">Add New Task</a>
 {% endblock %}
