--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,18 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
 </head>
-<body>
+<body class="bg-body-tertiary">
 
-<main class="container">
-  {% block content %}
-
-  {% endblock %}
+<div class="container-fluid">
+  <div class="row">
+    {% include "sidebar.html" %}
+    <main class="col-md-10 ms-sm-auto">
+      <!-- Page content will be rendered in this block -->
+      {% block content %}
+      {% endblock %}
+    </main>
+  </div>
+</div>
 </main>
 
 
