--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -1,11 +1,23 @@
+<!-- your_app_name/templates/add_task.html -->
+
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Add New Task</h1>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="Add Task">
-</form>
-<a href="{% url 'index' %}">Back to Todo List</a>
+<h1 class="mb-0">Add New Task</h1>
+  <div class="row">
+  <div class="col-md-10">
+  <div class="card">
+
+    <div class="card-body">
+      <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">Add Task</button>
+      </form>
+    </div>
+  </div>
+    </div>
+  </div>
+  <a href="{% url 'index' %}" class="btn btn-secondary mt-3">Back to Todo List</a>
+
 {% endblock %}
