--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -1,9 +1,8 @@
-<!-- your_app_name/templates/add_task.html -->
-
 {% extends "base.html" %}
+{% load crispy_forms_filters %}
 
 {% block content %}
-<h1 class="mb-0">Add New Task</h1>
+<h1 class="my-3">Add New Task</h1>
   <div class="row">
   <div class="col-md-10">
   <div class="card">
@@ -11,7 +10,7 @@
     <div class="card-body">
       <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button type="submit" class="btn btn-primary">Add Task</button>
       </form>
     </div>
