--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -5,7 +5,7 @@
         <a class="nav-link" href="{% url 'index' %}">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'add_task' %}">Add Task</a>
+        <a class="nav-link" href="{% url 'tag_list' %}">Tags</a>
       </li>
     </ul>
   </div>
