--- a/templates/tag_form.html
+++ b/templates/tag_form.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <h1 class="my-3">Add New Tag</h1>
+  <h1 class="my-3">{{ object|yesno:"Update,Add New" }} Tag</h1>
   <div class="row">
     <div class="col-md-10">
       <div class="card">
