add tags to task list

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+<!-- your_app_name/templates/home.html -->
+
 {% extends "base.html" %}
 
 {% block title %}
@@ -5,7 +7,6 @@
 {% endblock %}
 
 {% block content %}
-
 
   <div class="row">
     <div class="col-md-8">
@@ -20,8 +21,7 @@
     <div class="col-md-10">
       <div class="list-group">
         {% for task in tasks %}
-          <div
-              class="list-group-item list-group-item-action {% if task.is_done %}list-group-item-success{% else %}list-group-item-danger{% endif %} mt-3">
+          <div class="list-group-item list-group-item-action {% if task.is_done %}list-group-item-success{% else %}list-group-item-danger{% endif %} mt-3">
             <div class="d-flex w-100 justify-content-between">
               <h5 class="mb-1">{{ task.content }}</h5>
               {% if task.deadline_datetime %}
@@ -30,12 +30,14 @@
             </div>
             <p class="mb-1">Created: {{ task.created_datetime }}</p>
 
+            {% if task.tags.all %}
+              <p>Tags: {% for tag in task.tags.all %}<span class="">#{{ tag.name }} </span>{% endfor %}</p>
+            {% endif %}
 
             <div class="row">
               <div class="col-sm-10">
                 <a href="{% url 'update_task' task.id %}" class="btn btn-sm btn-outline-secondary ml-2">Update</a>
                 <a href="{% url 'delete_task' task.id %}" class="btn btn-sm btn-outline-danger ml-2">Delete</a>
-
               </div>
               <div class="col-sm-2 text-right">
                 <a href="{% url 'toggle_task_status' task.id %}"
@@ -48,13 +50,10 @@
                 </a>
               </div>
             </div>
-
-
           </div>
         {% endfor %}
       </div>
     </div>
   </div>
-
 
 {% endblock %}
